--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,8 +56,8 @@ h2 {
   /* font-size: 38px; */
   /* font-weight: 700; */
   /* line-height: 48px; */
-  /* margin: 0 0 24px;
-  padding: 0 30px; */
+  /* margin: 0 0 24px; */
+  padding: 30px 0px;
 }
 
 p {
