--- a/client/src/App.css
+++ b/client/src/App.css
@@ -114,3 +114,32 @@ p {
 .bgCardImg {
   max-height: 250px;
 }
+
+.single-azulejo-carrousel {
+  display: flex;
+  justify-content: center;
+  height: 80vh;
+  width: 35vw;
+}
+.single-azulejo-carrousel img {
+  height: 78vh;
+  width: auto;
+}
+
+.single-azulego-wood-azulejo {
+  position: absolute;
+  top: 120px;
+  left: 110px;
+  max-height: 50%;
+  box-shadow: 0px 13px 21px -5px rgba(0, 0, 0, 0.3);
+}
+
+.div-tile {
+  background-repeat: repeat;
+}
+
+.profile-user {
+  display: "flex";
+  flex-direction: "column";
+  text-align: left;
+}
