--- a/client/src/App.css
+++ b/client/src/App.css
@@ -115,22 +115,21 @@ p {
   max-height: 250px;
 }
 
-.single-azulejo-carrousel {
+/* .single-azulejo-carrousel {
   display: flex;
   justify-content: center;
   height: 80vh;
   width: 35vw;
-}
-.single-azulejo-carrousel img {
+} */
+/* .single-azulejo-carrousel img {
   height: 78vh;
   width: auto;
-}
+} */
 
 .single-azulego-wood-azulejo {
   position: absolute;
-  top: 120px;
-  left: 110px;
-  max-height: 50%;
+  top: 25%;
+  left: 25%;
   box-shadow: 0px 13px 21px -5px rgba(0, 0, 0, 0.3);
 }
 
