controls to carousel in single azulejo view

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,25 @@
   color: #09d3ac;
 } */
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  background-image: none;
+}
+
+.carousel-control-next-icon:after {
+  content: ">";
+  font-size: 55px;
+  color: #17a2b8;
+}
+
+.carousel-control-prev-icon:after {
+  content: "<";
+  font-size: 55px;
+  color: #17a2b8;
+}
+
 @import url("https://fonts.googleapis.com/css?family=Roboto:300&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Crimson+Text:400,400i&display=swap");
 
